Version Currency: Replace PowerMock (#111)
* Version Currency: Replace PowerMock

* formatting